layout overlap fixed

--- a/pmboard-gui-bp3/src/components/tabs/summary-tab/summary-tab.module.css
+++ b/pmboard-gui-bp3/src/components/tabs/summary-tab/summary-tab.module.css
@@ -15,7 +15,7 @@
 
 .executive_block {
     display: grid;
-    grid-template-columns: auto;
+    grid-template-columns: 100%;
     grid-template-rows: auto auto;
     grid-gap: 0;
     grid-row-gap: 1em;
